# pytorch-practice

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: Untitled.ipynb  cifar10-fc.ipynb  imagenet.ipynb  tensor.ipynb  wine.ipynb
scripts/: luna_annotation_mask_test.py  luna_dataset_positive_images.py  luna_dataset_test.py  run_lunar_training_app.py
src/: __init__.py  models.py
src/core/: app.py  const.py  run.py
src/luna/: app.py  dataset.py  main.py  model.py
src/luna/core/: ct.py  dataset.py  dto.py  unet.py  unet_wrapper.py  utils.py
src/wine_quality/: dataset.py  models.py
