[tool.poetry]
name = "pytorch-practice"
version = "0.1.0"
description = ""
authors = ["Yunhong Min <yunhongmin00@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.2.0"
torch = "2.3.0"
torchvision = "0.18.0"
torchaudio = "2.3.0"
h5py = "3.12.1"
pandas = "2.2.3"
toolz = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
